--- a/app/views/programmers/show.html.erb
+++ b/app/views/programmers/show.html.erb
@@ -11,9 +11,9 @@
 
   <div class="col-md-9 programmer-info">
 
-    <%= render partial: 'attribute', locals: {title: "home_country", value: @programmer.home_country %>
-    <%= render partial: 'attribute', locals: {title: "quote", value: @programmer.quote %>
-    <%= render partial: 'attribute', locals: {title: "claim_to_fame", value: @programmer.claim_to_fame %>
+    <%= render partial: 'attribute', locals: {title: "home_country", value: @programmer.home_country} %>
+    <%= render partial: 'attribute', locals: {title: "quote", value: @programmer.quote} %>
+    <%= render partial: 'attribute', locals: {title: "claim_to_fame", value: @programmer.claim_to_fame} %>
 
   
 
